--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,10 +1,14 @@
-<header class="header">
-  <img src="logos/logo_unify_white.png" alt="Unify Logo" class="header-logo">
-  <h1 class="header-title">Unify</h1>
-  <a href="/login" class="header-link">Acessar conta</a>
-</header>
-
-<main class="main-content">
-  <h2>Conheça o sistema</h2>
-  <img src="logos/logo_unify.png" alt="Unify" style="width: 500px;">
-</main> 
+<div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="logos/logo_unify.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">UniFy - Seu Sistema de Gerenciamento Universitário</h1>
+        <p class="lead">O UniFy centraliza e simplifica a gestão acadêmica, conectando alunos, professores e administradores em uma plataforma intuitiva e poderosa. Acesse suas notas, gerencie turmas, solicite documentos e muito mais.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a routerLink="/login" class="btn btn-primary btn-lg px-4 me-md-2">Acessar Plataforma</a>
+        </div>
+      </div>
+    </div>
+  </div> 
