--- a/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
+++ b/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
@@ -51,7 +51,11 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let s of filteredSolicitacoes">
+              <tr *ngFor="let s of filteredSolicitacoes" [ngClass]="{
+                'table-success': s.status === 'CONCLUIDA',
+                'table-danger': s.status === 'REJEITADA',
+                'table-warning': s.status === 'ABERTA'
+              }">
                 <td>{{ s.protocolo }}</td>
                 <td>{{ s.matriculaAluno }}</td>
                 <td>{{ s.nomeAluno }}</td>
