--- a/src/app/components/trocarsenha/trocarsenha.component.html
+++ b/src/app/components/trocarsenha/trocarsenha.component.html
@@ -1,9 +1,9 @@
 <div class="container mt-5">
-  <div class="row justify-content-center">
+  <div class="row justify-content-center align-items-center" style="min-height: 80vh;">
     <div class="col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h4>Alterar Senha - Primeiro Acesso</h4>
+      <div class="card shadow p-4 rounded">
+        <div class="card-header bg-white border-0">
+          <h2 class="text-center text-dark mb-1">Alterar Senha - Primeiro Acesso</h2>
         </div>
         <div class="card-body">
           <form [formGroup]="senhaForm" (ngSubmit)="onSubmit()">
