--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="bg-light text-center text-lg-start mt-5">
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2025 UniFy - Sistema de Gerenciamento Universitário
+<footer class="footer mt-auto py-3 bg-dark text-white text-center">
+  <div class="container">
+    <span>© 2025 UniFy - Sistema de Gerenciamento Universitário</span>
   </div>
 </footer>
