--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,9 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: navy;">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" routerLink="/">
-        <img *ngIf="universidadeLogoUrl" [src]="universidadeLogoUrl" alt="Logo Universidade" class="me-2" style="height: 30px; width: auto; border-radius: 4px;">
-        <span *ngIf="universidadeNome">{{ universidadeNome }}</span>
-        <span *ngIf="!universidadeNome">UniFy</span>
+        <img src="logos/logo_unify_white.png" alt="Logo UniFy" class="me-2" style="height: 40px; width: auto;">
+        <span>UniFy</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
